--- a/views/index.erb
+++ b/views/index.erb
@@ -6,9 +6,10 @@
 <body>
 <h1>movies</h1>
 <ul>
-	<li>movies</li>
-	<li>go</li>
-	<li>here</li>
+	<% @movies.each do |movie| %>
+    <li><%= @movie.title %></li>
+    <% end %>
+
 </ul>
 <a href="/movies/new">Add new movie</a>
 
