--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,10 @@
 	<title>my movies</title>
 </head>
 <body>
-<h1>movies</h1>
+<h1>my movies</h1>
 <ul>
 	<% @movies.each do |movie| %>
-    <li><%= @movie.title %></li>
+    <li><%= movie.title %></li>
     <% end %>
 
 </ul>
