--- a/views/new.erb
+++ b/views/new.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Add New Movie</h1>
-<form>
+<form method="post" action="/movies/create">
 <label for="title" >Title:</label>
 <input type="text" name="title">
 
